<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2014-2016 The OmniROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:key="gesture_category"
        android:title="@string/category_gestures_title"
        android:summary="@string/category_gestures_summary"
        android:persistent="false" >
        <intent android:action="android.intent.action.MAIN"
                android:targetPackage="org.omnirom.device"
                android:targetClass="org.omnirom.device.GestureSettings" />
    </PreferenceScreen>

    <PreferenceCategory
        android:title="@string/category_vibrator">
        <org.omnirom.device.VibratorStrengthPreference
            android:key="vib_strength"
            android:title="@string/vib_strength_title_head"
            android:summary="@string/vib_strength_summary_head" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_slider">
        <ListPreference
            android:key="slider_mode_top"
            android:title="@string/slider_mode_title_top"
            android:entries="@array/slider_key_action_entries"
            android:entryValues="@array/slider_key_action_values"
            android:persistent="false" />
        <ListPreference
            android:key="slider_mode_center"
            android:title="@string/slider_mode_title_center"
            android:entries="@array/slider_key_action_entries"
            android:entryValues="@array/slider_key_action_values"
            android:persistent="false" />
        <ListPreference
            android:key="slider_mode_bottom"
            android:title="@string/slider_mode_title_bottom"
            android:entries="@array/slider_key_action_entries"
            android:entryValues="@array/slider_key_action_values"
            android:persistent="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/buttons_title">
        <CheckBoxPreference
            android:key="swap_back_recents"
            android:summary="@string/swap_back_recents_summary"
            android:title="@string/swap_back_recents_title"
            android:persistent="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="graphics"
        android:title="@string/graphics_title">
        <CheckBoxPreference
            android:key="srgb"
            android:summary="@string/srgb_mode_summary"
            android:title="@string/srgb_mode_title" />
        <CheckBoxPreference
            android:key="dci"
            android:summary="@string/dci_mode_summary"
            android:title="@string/dci_mode_title" />
        <CheckBoxPreference
            android:key="hbm"
            android:summary="@string/hbm_mode_summary"
            android:title="@string/hbm_mode_title" />
        <CheckBoxPreference
            android:key="night"
            android:summary="@string/Night_mode_summary"
            android:title="@string/Night_mode_title" />
    </PreferenceCategory>
</PreferenceScreen>
